--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "angular-in-memory-web-api": "^0.10.0",
     "core-js": "^3.6.4",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
